Finish homepage and homepage actions